apps/immich/microservices-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-microservices
  template:
    metadata:
      labels:
        app: immich-microservices
    spec:
      containers:
        - name: microservices
          image: ghcr.io/immich-app/immich-microservices:release
          volumeMounts:
            - name: immich-library
              mountPath: /usr/src/app/upload
      volumes:
        - name: immich-library
          persistentVolumeClaim:
            claimName: immich-library
