apps/immich/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: server
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: immich-library
              mountPath: /data
      volumes:
        - name: immich-library
          persistentVolumeClaim:
            claimName: immich-library
