apps/immich/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
