apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: http
